static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*::selection {
  background-color: #FFCB34;
  color: #fff;
}

@keyframes contentReveal {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

body {
  height: auto;
  background-color: #fff;
}

html,
body {
  animation: contentReveal 1.25s ease;
}


.mainContainer {
  height: auto;
}

.line {
  width: 0%;
  position: fixed;
  top: 0;
  z-index: 15;
  height: 0.25rem;
  background-color: #ffd148;
  background-color: #FFCB34;
  box-shadow: 0px 0px 10px #8b680056;
}


/* navbar starts */

.navbar {
  position: fixed;
  top: 0;
  z-index: 10;
  height: 5rem;
  width: 100%;
  background-color: #fff;
  border-bottom: 1px solid #f3f3f3;
  display: flex;
  justify-content: center;
  align-items: center;
}

.mainNavContainer {
  width: 70rem;
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}

.mainNavContainer img {
  height: 1.5rem;
  width: 1.5rem;
}

.navNameContainer {
  font-family: 'Josefin Sans', sans-serif;
  font-size: .9rem;
  color: #424242;
  text-decoration: line-through;
  position: relative;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 0.15rem;
}

.navNameContainer::before {
  content: '*';
  color: #fff;
  opacity: 0;
}

.navNameContainer::after {
  content: '*';
  color: #fff;
  opacity: 0;
}


/* navbar ends */

/* heroSection starts */

.heroSectionGridContainer {
  height: 40rem;
  width: 70rem;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
}

.heroSectionGridContainer div {
  height: 100%;
  width: 10rem;
  border: 1px solid #ececec;
  border-right: none;
  border-top: none;
  border-bottom: none;
}

.heroSectionGridContainer div:last-child {
  border-right: 1px solid #f3f3f3;
}

@keyframes greetingSectionReveal {
  0% {
    opacity: 0;
    margin-left: -10rem;
  }

  100% {
    opacity: 1;
    margin-left: 0;
  }
}

.heroSection {
  height: 40rem;
  width: 70rem;
  margin: 0 auto;
  background: linear-gradient(to bottom, #fff 0% 10%, rgba(255, 0, 0, 0));
  align-items: center;
  margin-top: -40rem;
  padding-top: 15rem;
  position: relative;
  z-index: 1;
}

.greetingContainer {
  font-family: 'Josefin Sans', sans-serif;
  font-size: 2.25rem;
  font-weight: 400;
  color: #272727;
  padding-left: 1rem;
  /* animation: greetingSectionReveal 1.75s ease; */
}

.greetingName {
  opacity: 0.3;
}

.subGreetingContainer {
  font-family: 'Josefin Sans', sans-serif;
  font-size: 1.25rem;
  font-weight: 300;
  color: #363636;
  margin-top: 1.25rem;
  /* animation: greetingSectionReveal 1.75s ease; */
  padding-left: 1rem;
}

.distanceDeltaDivContainer {
  font-family: 'Josefin Sans', sans-serif;
  font-size: 1rem;
  font-weight: 300;
  color: #6f6f6f;
  margin-top: 1.25rem;
  /* animation: greetingSectionReveal 1.75s ease; */
  padding-left: 1rem;
  font-style: italic;
}

#distanceDeltaBold {
  color: #6d6d6d;
  font-size: 1.25rem;
}


@keyframes curveReveal {
  0% {
    opacity: 0;
    margin-left: -10rem;
  }

  100% {
    opacity: 1;
    margin-left: 5rem;
  }
}

.curveContainer {
  /* animation: curveReveal 2s ease;  */
  padding-left: 1rem;
  margin-top: 4rem;
  margin-left: 5rem;
}

/* hero section curve */

.curveContainer img {
  height: 3rem;
  filter: grayscale();
}

/* heroSection ends */

/* workSection starts */

.workSection {
  width: 100%;
  height: auto;
  background-color: #171717;
  margin: 0 auto;
  padding: 6rem 0;
}

.mainWorkSection {
  width: 70rem;
  height: auto;
  margin: 0 auto;
}

.workSectionTitle {
  text-align: left;
  font-family: 'Josefin Sans', sans-serif;
  font-size: 2.25rem;
  color: #fff;
  letter-spacing: 1rem;
  text-transform: uppercase;
  /* margin-bottom: 4rem; */
  font-weight: 600;
}

.workSectionTitle span {
  font-size: 1rem;
  margin-right: -1rem;
  letter-spacing: 0.2rem;
  font-weight: 300;
}

.workUnderLineContainer {
  margin-top: 0.4rem;
}


.workUnderLineContainer img {
  height: 0.6rem;
}

.workContainer {
  height: auto;
  width: 100%;
  margin: 0 auto;
}

.workGrid {
  height: auto;
  min-height: 45rem;
  margin-top: -10rem;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
}

.workLeft {
  height: 100%;
  width: 40%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.workImgContainer {
  margin-bottom: 2.75rem;
}

.aboutWorkContainer {
  width: 100%;
  text-align: left;
  font-family: 'Josefin Sans', sans-serif;
  font-size: 1rem;
  color: #fff;
  letter-spacing: 0.1rem;
  font-weight: 600;
}

.aboutWorkContainer p {
  text-transform: uppercase;
}

.subAboutWorkContainer {
  text-align: left;
  font-family: 'Montserrat', sans-serif;
  margin-top: 0.5rem;
  font-size: 0.8rem;
  color: #fff;
  letter-spacing: 0rem;
  font-weight: 300;
  width: 80%;
  line-height: 1.25rem;
}

.workImgContainer img {
  height: 27.5rem;
  width: 28rem;
}

.workLinksContainer {
  margin-top: 2rem;
  text-align: left;
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  transition: 0.3s;
}

.workLinksContainer a {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  transition: 0.3s;
}
/* ... */

